# lib/db/src/schema/index.ts
@@ -18,3 +18,4 @@
 //   export type Post = typeof postsTable.$inferSelect;
 
 export * from "./meetings";
+export * from "./settings";
